src/pages/Home.module.css
body {
  margin: 0;
  font-family: 'Arial', sans-serif;
  background: linear-gradient(to bottom, #eaf7ff, #d4e9d9);
  color: #202022;
  overflow: hidden;
  width: 100%;
  height: 100vh;
}

.homepage {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;

  padding: 20px;
    display: flex;
  width: 100%;
  justify-content: center;
  align-items: center;
}


.story-container {
  background: rgba(255, 255, 255, 0.1);
  border-radius: 15px;
  padding: 30px;
  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
  width: 700px;
  text-align: center;
  height: 100vh;
    display: flex;
  width: 100%;
  justify-content: center;
  align-items: center;
}

.title {
  font-size: 2.5rem;
  margin-bottom: 15px;
  text-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
}

.description {
  font-size: 1.2rem;
  margin-bottom: 20px;
  line-height: 1.6;
}

.subtitle {
  font-size: 1.8rem;
  margin: 20px 0;
  text-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
}

.story-list {
  list-style: none;
  padding: 0;
}

.story-list li {
  font-size: 1.2rem;
  margin: 10px 0;
  text-align: left;
  text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
}

.footer {
  margin-top: 20px;
  font-size: 1.1rem;
  text-shadow: 0px 1px 4px rgba(0, 0, 0, 0.3);
  color: #4c20b3;
}

